--- a/.gitignore
+++ b/.gitignore
@@ -1,60 +1,1 @@
-# Node.js & npm
-node_modules/
-npm-debug.log
-yarn-error.log
-
-# Express.js logs
-logs/
-*.log
-
-# Dependency directories
-jspm_packages/
-bower_components/
-
-# Distribution directory
-dist/
-
-# Production build
-build/
-
-# Environment variables
-.env
-
-# IDE configuration files
-.idea/
-.vscode/
-
-# Mac OS system files
-.DS_Store
-
-# Editor and OS generated files
-*.suo
-*.user
-*.suo
-*.user
-*.suo
-*.user
-
-# Windows image file caches
-Thumbs.db
-
-# Mac thumbnail files
-._*
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Temporary folders for builds
-node_modules/
-
-# Webpack HMR files
-src/main.ts
-
-# Visual Studio Code directory
-.vscode/
-
-# MongoDB data files
-/data/
-
-# Log files
-/logs/
+node_modules
